# N-Body-Parallel-Speedup

./: CMakeLists.txt  N-Body Simulator.vcxproj
Debug/: N-Body Simulator.pch  vc141.idb
Debug/N-Body Simulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  N-Body Simulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GPGPU/: Body.h  N-Body_Simulator.cpp  Simulation.cu  Simulation.h
Multi-Threaded/: Body.cpp  Simulation.cpp  Simulation.h
Release/: N-Body Simulator.pch
Release/N-Body Simulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  N-Body Simulator.lastbuildstate  N-Body Simulator.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sequential/: N-Body_Simulator.cpp  Simulation.cpp  Simulation.h
